gccida/c2/cse_end_of_basic_block
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7316:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7316:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7337:20: error: use of undeclared identifier 'uid_cuid_0'
v9 = *( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7348:32: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
if ( data->path[v12].status != NOT_TAKEN_0 ) 
                               ^~~~~~~~~~~
                               NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:580:26: note: 'NOT_TAKEN' declared here
      enum taken {TAKEN, NOT_TAKEN, AROUND} status;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7350:26: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
data->path[v12].status = NOT_TAKEN_0; 
                         ^~~~~~~~~~~
                         NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:580:26: note: 'NOT_TAKEN' declared here
      enum taken {TAKEN, NOT_TAKEN, AROUND} status;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7381:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = (  struct rtx_def *)rtx[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7388:49: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( rtx_class[v17] == 105 && ( v19 = ( __int64)rtx[2], *( _WORD *)v19 == 39) ) 
                                                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7395:21: error: use of undeclared identifier 'uid_cuid_0'
v21 = *( ( _DWORD *)uid_cuid_0 + rtint); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7406:32: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
if ( data->path[v43].status != NOT_TAKEN_0 ) 
                               ^~~~~~~~~~~
                               NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:580:26: note: 'NOT_TAKEN' declared here
      enum taken {TAKEN, NOT_TAKEN, AROUND} status;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7407:13: error: expected ';' after expression
rtx = ( rtx)rtx[4]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7413:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v23 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7416:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v24 = ( __int64)rtx[4]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7455:28: error: expected ')'
if ( next_real_insn( ( rtx)i) == real_insn ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7455:20: note: to match this '('
if ( next_real_insn( ( rtx)i) == real_insn ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7483:1: error: use of undeclared identifier 'v30'
v30 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7485:1: error: use of undeclared identifier 'v30'
v30 = v30[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7485:7: error: use of undeclared identifier 'v30'
v30 = v30[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7486:16: error: use of undeclared identifier 'v30'
while ( v30 && v30 != ( rtx)i && *( _WORD *)v30 != 36 ); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7486:9: error: use of undeclared identifier 'v30'
while ( v30 && v30 != ( rtx)i && *( _WORD *)v30 != 36 ); 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7486:29: error: expected ')'
while ( v30 && v30 != ( rtx)i && *( _WORD *)v30 != 36 ); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/cse.c:7486:7: note: to match this '('
while ( v30 && v30 != ( rtx)i && *( _WORD *)v30 != 36 ); 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_end_of_basic_block/src/obj/cse.o] Error 1
